# AI-Portfolio-Manager

./: 20251013_NSE.csv  pyproject.toml  requirements.txt
mf_portfolio_manager/: README.md  pyproject.toml  requirements.txt
mf_portfolio_manager/src/mf_portfolio_manager/: crew.py  main.py
mf_portfolio_manager/src/mf_portfolio_manager/config/: agents.yaml  tasks.yaml
mf_portfolio_manager/src/mf_portfolio_manager/tools/: custom_tool.py
mf_portfolio_manager/src/mf_portfolio_manager/web/: server.py
mf_portfolio_manager/src/mf_portfolio_manager/web/static/: app.js  index.html  styles.css
