[project]
name = "ai-portfolio-manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "deprecated>=1.3.1",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "mftool>=3.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]
