[project]
name = "ai-portfolio-manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "crewai>=1.5.0",
    "deprecated>=1.3.1",
    "ipykernel>=7.0.1",
    "langchain>=1.0.8",
    "langchain-core>=1.0.7",
    "langchain-openai>=1.0.3",
    "matplotlib>=3.10.7",
    "mftool>=3.0",
    "numpy>=2.3.4",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "yfinance>=0.2.66",
]
