[project]
name = "mf_portfolio_manager"
version = "0.1.0"
description = "mf-portfolio-manager using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
mf_portfolio_manager = "mf_portfolio_manager.main:run"
run_crew = "mf_portfolio_manager.main:run"
train = "mf_portfolio_manager.main:train"
replay = "mf_portfolio_manager.main:replay"
test = "mf_portfolio_manager.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
